# image-resizer-advanced

./: Cargo.toml  README.md
.github/workflows/: stable.yml
src/: compression.rs  main.rs  simple.rs
