[package]
name = "image-resizer-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio"] }
image = "0.24"
rfd = "0.12"
walkdir = "2.4"
open = "5.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true