[package]
name = "image-resizer-advanced"
version = "0.4.0"
edition = "2021"

[dependencies]
# GUI Framework
iced = { version = "0.10", features = ["tokio", "image"] }

# Image processing
image = { version = "0.24", features = ["jpeg", "png", "gif", "webp", "bmp"] }

# Native compression libraries
mozjpeg = "0.10"
oxipng = "9.0"
libwebp-sys = "0.9"
webp = "0.2"
ravif = "0.11"
rav1e = "0.7"
imgref = "1.10"
rgb = "0.8"
indexmap = "2.0"

# File handling
walkdir = "2.4"
rfd = "0.12"
open = "5.0"

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

# Additional utilities
rayon = "1.8"  # For parallel processing in oxipng

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-Ctarget-feature=+crt-static","-Clink-arg=-static"]
[target.i686-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-unknown-linux-musl]
rustflags = ["-Ctarget-feature=+crt-static"]
[target.x86_64-apple-darwin]
rustflags = ["-Ctarget-feature=+crt-static"]

[profile.release]
#opt-level = 3       # Optimize for speed
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#strip = true        # Strip symbols from binary